# benchmarking

./: Benchmarking - Data Capture.csv  Benchmarking SRA Samples.csv  Data Capture Table.csv  Data Capture Table.xlsx  PhaseII Sample ID Table.xlsx  README.md  requirements.txt  viral_SRA_dataset.csv
analysis/phase_1/: Dockerfile  README.md  dashboard.py  format-submissions.sh  gather-pairs.py  prepare-entry.py
analysis/phase_1/1_data_processing/: .dockerignore  Dockerfile  format-submission.sh  gather-pairs.py  metrics.py  prepare-entry.py
analysis/phase_1/2_interpretation/: Dockerfile  app.py  docker-compose.yml  io_ops.py  pcoa_corr_violins.py  pcoa_loadings.R  pyproject.toml  requirements.txt  run_dashboard.sh  stats.py
analysis/phase_1/2_interpretation/src/pgcoe_vbd/: app.py  data_filter.py  data_format.py  data_plot.py  io_ops.py  metrics.py  ui.py
analysis/phase_1/analysis/: ERR10221502_Influenza_A_1.aligned.fa  ERR10221502_Influenza_A_1.multi.fa  ERR10221502_Influenza_A_1_metrics.csv  ERR10221502_Influenza_A_2.aligned.fa  ERR10221502_Influenza_A_2.multi.fa  ERR10221502_Influenza_A_2_metrics.csv  ERR10221502_Influenza_A_3.aligned.fa  ERR10221502_Influenza_A_3.multi.fa  ERR10221502_Influenza_A_3_metrics.csv  ERR10221502_Influenza_A_4.aligned.fa  ERR10221502_Influenza_A_4.multi.fa  ERR10221502_Influenza_A_4_metrics.csv  ERR10221502_Influenza_A_5.aligned.fa  ERR10221502_Influenza_A_5.multi.fa  ERR10221502_Influenza_A_5_metrics.csv  ERR10221502_Influenza_A_6.aligned.fa  ERR10221502_Influenza_A_6.multi.fa  ERR10221502_Influenza_A_6_metrics.csv  (+339 more)
